<resources>
    <string name="app_name">EcoAppUI2</string>
    <string name="second_activity">writetonfc</string>
    <string name="action_settings">Settings</string>
    <string name="tap_number">ID number will go here</string>
    <string name="score">Score</string>
    <string name="taps">Number of Taps</string>
    <string name="id">ID:</string>
    <string name="taps_display"># of Taps:</string>
    <string name="score_label">Score:</string>
    <string name="button_label">Increment Tap</string>
    <string name="id_hint">Enter ID Here</string>
    <string name="id_name">Name</string>
    <string name="scan_button_label">Scan</string>
    <string name="select_category_lable">Select Category:</string>
    <string name="write_button">Write</string>


    <string-array name="categories">
        <item>Waterbottle</item>
        <item>Bus</item>
        <item>Bike</item>
        <item>Reusable Grocery Bag</item>
        <item>Recycling Bin</item>
    </string-array>

</resources>
